changed font of the timer to ensure that it didn't make a weird glitch with the play/pause button since the spacing would change depending on the numbers

--- a/src/main/Timer.module.css
+++ b/src/main/Timer.module.css
@@ -21,3 +21,6 @@
 .startButton:focus {
 border: 1px solid black;
 }
+.timer {
+	font-family: Courier;
+}
